- Added model permission. - Added contoller for the admin to create a role. - Added middleware to check if user is admin. - Added test for role. - Added role in the token. - Changed role data type in the user model.
