# src/controllers/helpers/validateRoles.js
@@ -1,0 +1,3 @@
+const validateRoles = data => (data.permissions && data.role && data.tablesAllowed)
+&& data;
+export default validateRoles;
